--- a/site/login.html
+++ b/site/login.html
@@ -17,5 +17,6 @@
         <input type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="/register">Register here</a>.</p>
+    <p><a href="/">Back to Home</a></p>
 </body>
 </html>
