--- a/site/manager.html
+++ b/site/manager.html
@@ -13,7 +13,10 @@
 </head>
 <body>
     <h1>Welcome, {{ user.username }}!</h1>
-    <p><a href="/logout">Logout</a></p>
+    <p>
+        <a href="/">Back to Home</a> | 
+        <a href="/logout">Logout</a>
+    </p>
     
     <h2>My Skins</h2>
     <div class="skin-gallery">
