--- a/site/login.html
+++ b/site/login.html
@@ -1,22 +1,56 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login | PyAuthSkin</title>
+    <link rel="stylesheet" href="/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) document.documentElement.classList.add('dark');
+        tailwind.config = { darkMode: 'class' };
+    </script>
 </head>
 <body>
-    <h1>Login</h1>
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
-    <form action="/login" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Login">
-    </form>
-    <p>Don't have an account? <a href="/register">Register here</a>.</p>
-    <p><a href="/">Back to Home</a></p>
+    <header class="fixed top-0 w-full z-50 header-shell h-16">
+        <div class="max-w-6xl mx-auto px-6 h-full flex items-center justify-between">
+            <a href="/" class="flex items-center gap-2 group">
+                <div class="w-8 h-8 bg-emerald-500 rounded-lg flex items-center justify-center text-white font-bold group-hover:rotate-6 transition-transform">P</div>
+                <span class="font-bold text-lg tracking-tight">PyAuthSkin</span>
+            </a>
+            <button onclick="toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
+                <svg class="hidden dark:block w-5 h-5 text-amber-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m15.364-6.364l-.707.707M6.343 17.657l-.707.707m12.728 0l-.707-.707M6.343 6.343l-.707-.707M12 8a4 4 0 100 8 4 4 0 000-8z" /></svg>
+                <svg class="block dark:hidden w-5 h-5 text-slate-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
+            </button>
+        </div>
+    </header>
+
+    <div id="pjax-container" class="pt-24 pb-12 animate-fade">
+        <main class="max-w-md mx-auto px-6 py-12">
+            <div class="card-base p-10">
+                <div class="text-center mb-10">
+                    <h2 class="text-3xl font-bold tracking-tight">Welcome back</h2>
+                    <p class="text-slate-500 mt-2">Enter your credentials to continue</p>
+                </div>
+                {% if error %}<div class="mb-6 p-4 bg-red-50 text-red-600 text-sm rounded-2xl font-medium border border-red-100">{{ error }}</div>{% endif %}
+                <form action="/login" method="post" class="space-y-6">
+                    <div>
+                        <label class="label-caps">Username</label>
+                        <input type="text" name="username" required class="input-field">
+                    </div>
+                    <div>
+                        <label class="label-caps">Password</label>
+                        <input type="password" name="password" required class="input-field">
+                    </div>
+                    <button type="submit" class="w-full py-4 btn-base btn-emerald text-lg mt-4">Sign In</button>
+                </form>
+                <div class="mt-8 text-center text-sm text-slate-500">New here? <a href="/register" class="text-emerald-500 font-bold hover:underline">Create an account</a></div>
+            </div>
+        </main>
+    </div>
+    <script>
+        function toggleTheme() { document.documentElement.classList.toggle('dark'); localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light'; }
+    </script>
 </body>
 </html>
