--- a/site/manager.html
+++ b/site/manager.html
@@ -12,12 +12,12 @@
         tailwind.config = { darkMode: 'class' };
     </script>
 </head>
-<body>
+<body class="bg-slate-50 dark:bg-slate-900">
     <header class="fixed top-0 w-full z-50 header-shell h-16">
         <div class="max-w-6xl mx-auto px-6 h-full flex items-center justify-between">
             <a href="/" class="flex items-center gap-2 group">
                 <div class="w-8 h-8 bg-emerald-500 rounded-lg flex items-center justify-center text-white font-bold group-hover:rotate-6 transition-transform">P</div>
-                <span class="font-bold text-lg tracking-tight">PyAuthSkin</span>
+                <span class="font-bold text-lg tracking-tight text-slate-900 dark:text-white">PyAuthSkin</span>
             </a>
             <div class="flex items-center gap-4">
                 <button onclick="toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
@@ -32,10 +32,10 @@
         </div>
     </header>
 
-    <div id="pjax-container" class="pt-24 pb-12 animate-fade">
+    <div id="pjax-container" class="pt-24 pb-12">
         <main class="max-w-6xl mx-auto px-6">
             <header class="mb-12">
-                <h2 class="text-4xl font-extrabold tracking-tight">Skin Vault</h2>
+                <h2 class="text-4xl font-extrabold tracking-tight text-slate-900 dark:text-white">Skin Vault</h2>
                 <p class="text-slate-500">Manage your character appearances</p>
             </header>
 
@@ -47,12 +47,12 @@
                         {% if skin.is_active_skin %}<div class="absolute top-3 right-3 w-3 h-3 bg-emerald-500 rounded-full animate-pulse"></div>{% endif %}
                     </div>
                     <div class="px-1">
-                        <h3 class="font-bold text-sm truncate">{{ skin.display_name }}</h3>
+                        <h3 class="font-bold text-sm truncate text-slate-800 dark:text-slate-200">{{ skin.display_name }}</h3>
                         <p class="text-[10px] uppercase font-bold text-slate-400 tracking-tighter mb-4">{{ skin.model }} model</p>
                         <div class="flex gap-2">
                             {% if not skin.is_active_skin %}
                             <form action="/manager/set_active/{{ skin.id }}" method="post" class="flex-grow">
-                                <button type="submit" class="w-full py-2 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-[10px] font-black uppercase rounded-xl hover:bg-emerald-100 transition">Active</button>
+                                <button type="submit" class="w-full py-2 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-[10px] font-black uppercase rounded-xl hover:bg-emerald-100 dark:hover:bg-emerald-900/40 transition">Active</button>
                             </form>
                             {% endif %}
                             <form action="/manager/delete_skin/{{ skin.id }}" method="post" onsubmit="return confirm('Burn this skin?');">
@@ -68,7 +68,7 @@
 
             <section class="max-w-2xl mx-auto card-base p-10 relative overflow-hidden">
                 <div class="absolute top-0 right-0 w-32 h-32 bg-emerald-500/5 blur-3xl rounded-full"></div>
-                <h3 class="text-2xl font-bold mb-8">Upload New Texture</h3>
+                <h3 class="text-2xl font-bold mb-8 text-slate-900 dark:text-white">Upload New Texture</h3>
                 <form action="/manager/upload" method="post" enctype="multipart/form-data" class="space-y-6">
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                         <div>
@@ -87,7 +87,7 @@
                         <label class="label-caps">Skin File (.png)</label>
                         <div class="relative group">
                             <input type="file" name="file" accept=".png" required class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-10" />
-                            <div class="py-10 border-2 border-dashed border-slate-200 dark:border-slate-700 rounded-3xl flex flex-col items-center justify-center group-hover:border-emerald-500 transition bg-slate-50/50 dark:bg-slate-800/50">
+                            <div class="py-10 border-2 border-dashed border-slate-200 dark:border-slate-700 rounded-2xl flex flex-col items-center justify-center group-hover:border-emerald-500 transition bg-slate-50/50 dark:bg-slate-800/50">
                                 <svg class="w-8 h-8 text-slate-400 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                 <span class="text-sm text-slate-400 text-center">Drag or click to choose PNG<br><span class="text-[10px] opacity-50 font-bold">Recommended 64x64</span></span>
                             </div>
@@ -99,12 +99,57 @@
         </main>
     </div>
 
-    <!-- 同样需要包含这些脚本，以防页面硬刷新 -->
-    <script>
-        function toggleTheme() {
-            document.documentElement.classList.toggle('dark');
-            localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';
+    <script id="pjax-logic">
+        // 与首页保持高度一致的 PJAX 逻辑
+        function toggleTheme() { document.documentElement.classList.toggle('dark'); localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light'; }
+        
+        const pjaxContainer = document.getElementById('pjax-container');
+        
+        async function updateDOM(html, url, pushState = true) {
+            const doc = new DOMParser().parseFromString(html, 'text/html');
+            const newContent = doc.getElementById('pjax-container');
+            if (newContent) {
+                pjaxContainer.classList.add('pjax-loading');
+                setTimeout(() => {
+                    pjaxContainer.innerHTML = newContent.innerHTML;
+                    document.title = doc.title;
+                    if (pushState) window.history.pushState({ url }, doc.title, url);
+                    pjaxContainer.classList.remove('pjax-loading');
+                }, 150);
+            } else window.location.href = url;
         }
+
+        async function loadPage(url, pushState = true) {
+            try {
+                const res = await fetch(url);
+                updateDOM(await res.text(), res.url, pushState);
+            } catch (e) { window.location.href = url; }
+        }
+
+        document.addEventListener('click', e => {
+            const a = e.target.closest('a');
+            if (a && a.href && a.origin === window.location.origin && !a.hasAttribute('download') && !a.target) {
+                e.preventDefault(); loadPage(a.href);
+            }
+        });
+
+        window.onpopstate = () => loadPage(window.location.pathname, false);
+
+        document.addEventListener('submit', async e => {
+            const f = e.target;
+            if (f.origin === window.location.origin && f.enctype !== 'multipart/form-data') {
+                e.preventDefault();
+                try {
+                    const res = await fetch(f.action, {
+                        method: f.method,
+                        body: new URLSearchParams(new FormData(f)),
+                        headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
+                    });
+                    const html = await res.text();
+                    updateDOM(html, res.url, true);
+                } catch (err) { window.location.reload(); }
+            }
+        });
     </script>
 </body>
 </html>
