--- a/site/manager.html
+++ b/site/manager.html
@@ -25,22 +25,45 @@
                     <svg class="block dark:hidden w-5 h-5 text-slate-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                 </button>
                 <nav class="flex items-center gap-4 border-l border-slate-200 dark:border-slate-700 pl-4">
-                    <a href="/manager" class="text-sm font-medium text-emerald-500">Dashboard</a>
-                    <a href="/logout" class="text-sm font-medium text-slate-500 hover:text-red-500 transition">Logout</a>
+                    <div class="flex items-center gap-2 group">
+                        <span class="text-sm font-bold text-slate-700 dark:text-slate-200">{{ user.username }}</span>
+                    </div>
                 </nav>
             </div>
         </div>
     </header>
 
     <div id="pjax-container" class="pt-24 pb-12">
+        <!-- 自定义删除确认模态框 (放在 pjax 容器内) -->
+        <div id="delete-modal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
+            <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm" onclick="closeDeleteModal()"></div>
+            <div class="relative bg-white dark:bg-slate-800 rounded-3xl p-8 max-w-sm w-full shadow-2xl transform scale-95 transition-transform duration-200" id="modal-card">
+                <div class="w-16 h-16 bg-red-100 dark:bg-red-900/30 rounded-2xl flex items-center justify-center text-red-500 mb-6 mx-auto">
+                    <svg class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" /></svg>
+                </div>
+                <h3 class="text-xl font-bold text-center text-slate-900 dark:text-white mb-2">Delete Texture?</h3>
+                <p class="text-slate-500 dark:text-slate-400 text-center text-sm mb-8 leading-relaxed">This action will permanently remove this skin from your vault. This cannot be undone.</p>
+                <div class="flex gap-3">
+                    <button onclick="closeDeleteModal()" class="flex-1 py-3 bg-slate-100 dark:bg-slate-700 text-slate-600 dark:text-slate-300 font-bold rounded-xl hover:bg-slate-200 dark:hover:bg-slate-600 transition-colors">Cancel</button>
+                    <button id="confirm-delete-btn" class="flex-1 py-3 bg-red-500 text-white font-bold rounded-xl hover:bg-red-600 shadow-lg shadow-red-500/20 transition-all active:scale-95">Delete</button>
+                </div>
+            </div>
+        </div>
+
         <main class="max-w-6xl mx-auto px-6">
             <header class="mb-12 flex items-end justify-between">
                 <div>
                     <h2 class="text-4xl font-extrabold tracking-tight text-slate-900 dark:text-white">Skin Vault</h2>
                     <p class="text-slate-500">Select and manage your active identity</p>
                 </div>
-                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest border border-slate-200 dark:border-slate-800 px-3 py-1 rounded-full">
-                    {{ skins|length }} Textures
+                <div class="flex items-center gap-4">
+                    <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest border border-slate-200 dark:border-slate-800 px-3 py-1 rounded-full">
+                        {{ skins|length }} Textures
+                    </div>
+                    <a href="/logout" class="text-xs font-bold text-red-500 hover:text-red-600 transition-colors uppercase tracking-wider flex items-center gap-1.5 px-3 py-1.5 rounded-lg hover:bg-red-50 dark:hover:bg-red-900/10">
+                        <svg class="w-3.5 h-3.5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
+                        Logout
+                    </a>
                 </div>
             </header>
 
@@ -68,8 +91,8 @@
                             {% else %}
                             <div class="flex-grow py-2 bg-emerald-500 text-white text-[10px] font-black uppercase rounded-xl text-center cursor-default">Active</div>
                             {% endif %}
-                            <form action="/manager/delete_skin/{{ skin.id }}" method="post" onsubmit="return confirm('Permanently delete this texture?');">
-                                <button type="submit" class="p-2 text-slate-300 hover:text-red-500 transition-colors">
+                            <form action="/manager/delete_skin/{{ skin.id }}" method="post" id="delete-form-{{ skin.id }}">
+                                <button type="button" onclick="openDeleteModal('delete-form-{{ skin.id }}')" class="p-2 text-slate-300 hover:text-red-500 transition-colors">
                                     <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" /></svg>
                                 </button>
                             </form>
@@ -115,71 +138,6 @@
         </main>
     </div>
 
-    <script id="pjax-logic">
-        function toggleTheme() { document.documentElement.classList.toggle('dark'); localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light'; }
-        const pjaxContainer = document.getElementById('pjax-container');
-        
-        // 文件选择反馈逻辑
-        function handleFileSelect(input) {
-            const zone = document.getElementById('upload-zone');
-            const text = document.getElementById('upload-text');
-            const subtext = document.getElementById('upload-subtext');
-            const icon = document.getElementById('upload-icon');
-            
-            if (input.files && input.files[0]) {
-                const fileName = input.files[0].name;
-                text.innerText = fileName;
-                text.classList.replace('text-slate-400', 'text-emerald-500');
-                text.classList.add('font-bold');
-                subtext.innerText = "Ready to upload";
-                zone.classList.replace('border-slate-200', 'border-emerald-500');
-                zone.classList.add('bg-emerald-50/10');
-                icon.innerHTML = `<svg class="w-10 h-10 text-emerald-500 animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" /></svg>`;
-            }
-        }
-
-        async function updateDOM(html, url, pushState = true) {
-            const doc = new DOMParser().parseFromString(html, 'text/html');
-            const newContent = doc.getElementById('pjax-container');
-            if (newContent) {
-                pjaxContainer.classList.add('pjax-loading');
-                requestAnimationFrame(() => {
-                    pjaxContainer.innerHTML = newContent.innerHTML;
-                    document.title = doc.title;
-                    if (pushState) window.history.pushState({ url }, doc.title, url);
-                    requestAnimationFrame(() => { pjaxContainer.classList.remove('pjax-loading'); });
-                });
-            } else window.location.href = url;
-        }
-        async function loadPage(url, pushState = true) {
-            try {
-                const res = await fetch(url);
-                updateDOM(await res.text(), res.url, pushState);
-            } catch (e) { window.location.href = url; }
-        }
-        document.addEventListener('click', e => {
-            const a = e.target.closest('a');
-            if (a && a.href && a.origin === window.location.origin && !a.hasAttribute('download') && !a.target) {
-                e.preventDefault(); loadPage(a.href);
-            }
-        });
-        window.onpopstate = () => loadPage(window.location.pathname, false);
-        document.addEventListener('submit', async e => {
-            const f = e.target;
-            if (f.origin === window.location.origin && f.enctype !== 'multipart/form-data') {
-                e.preventDefault();
-                pjaxContainer.classList.add('pjax-loading');
-                try {
-                    const res = await fetch(f.action, {
-                        method: f.method,
-                        body: new URLSearchParams(new FormData(f)),
-                        headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
-                    });
-                    const html = await res.text();
-                    updateDOM(html, res.url, true);
-                } catch (err) { window.location.reload(); }
-            }
-        });
-    </script>
+    <script src="/script.js"></script>
 </body>
 </html>
